overflow fix

--- a/style.css
+++ b/style.css
@@ -37,8 +37,6 @@ html {
 * {
     margin: 0;
     padding: 0;
-    border: red solid 1px;
-    overflow: hidden;
 }
 
 h3 {
